--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,7 +87,7 @@
             app:layout_constraintTop_toBottomOf="@+id/etInputCif" />
 
         <Button
-            android:id="@+id/btLogin"
+            android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
