--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,13 +4,13 @@
 
     <item android:title="Home"
         android:icon="@drawable/ic_home"
-        android:id="@+id/fHome"/>
+        android:id="@+id/homeFragment"/>
 
     <item android:title="Calendar"
         android:icon="@drawable/ic_calendar"
-        android:id="@+id/fCalendar"/>
+        android:id="@+id/calendarFragment"/>
 
     <item android:title="Profile"
         android:icon="@drawable/ic_person"
-        android:id="@+id/fProfile"/>
+        android:id="@+id/profileFragment"/>
 </menu>
