--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.view.fragments.ProfileFragment"
-        android:id="@+id/fProfile"
+        android:id="@+id/profileFragment"
         android:background="@color/design_default_color_secondary_variant">
 
         <!-- TODO: Update blank fragment layout -->
