--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.view.fragments.HomeFragment"
+        tools:context=".ui.user.home.view.HomeFragment"
         android:id="@+id/homeFragment"
         android:background="@color/cardview_light_background">
 
