--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.wagit.desktrack.ui.view.fragments.HomeFragment"
+        android:name="com.wagit.desktrack.ui.user.home.view.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/calendarFragment"
-        android:name="com.wagit.desktrack.ui.view.fragments.CalendarFragment"
+        android:name="com.wagit.desktrack.ui.user.calendar.view.CalendarFragment"
         android:label="Calendar"
         tools:layout="@layout/fragment_calendar" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.wagit.desktrack.ui.view.fragments.ProfileFragment"
+        android:name="com.wagit.desktrack.ui.user.profile.view.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
