Added counting total hours worked funcionality and added a card type layout in HomeFragment, fragment_home and colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="desk_orange_light">#ff9800</color>
     <color name="desk_orange_bold">#ff5500</color>
+    <color name="cardview_grey_color">#efe8e8</color>
 </resources>
