Testing Calendar Fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="desk_orange_light">#ff9800</color>
     <color name="desk_orange_bold">#ff5500</color>
     <color name="cardview_grey_color">#efe8e8</color>
+    <color name="blue">#0000FF</color>
+    <color name="gray">#888</color>
 </resources>
