--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="sharedCalendarVM"
+            type="com.wagit.desktrack.ui.user.calendar.view.CalendarFragment" />
 
     </data>
 
@@ -11,14 +15,19 @@
         android:layout_height="match_parent"
         tools:context=".ui.user.calendar.view.CalendarFragment"
         android:id="@+id/calendarFragment"
-        android:background="@color/design_default_color_primary_variant">
+        android:background="@color/white">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:id="@+id/textDashboard"
+        <com.kizitonwose.calendarview.CalendarView
+            android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            app:cv_dayViewResource="@layout/calendar_day_layout"
+            app:cv_monthHeaderResource="@layout/calendar_month_header_layout"
+            app:cv_orientation="horizontal"
+            app:cv_outDateStyle="endOfRow"
+            app:cv_inDateStyle="allMonths"
+            app:cv_scrollMode="paged" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
