Added all the funcionalities of the calendar in the calendar fragment

--- a/app/src/main/res/layout/calendar_month_header_layout.xml
+++ b/app/src/main/res/layout/calendar_month_header_layout.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/headerTextView"
+        android:id="@+id/headerTextViewMonth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:textSize="26sp"
-        tools:text="July 2020"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:text="July 2020" />
+
+    <TextView
+        android:id="@+id/headerTextViewDay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="24sp"
+        android:gravity="left"
+        app:layout_constraintTop_toBottomOf="@+id/headerTextViewMonth"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
+        tools:text="Sun | Mon | Tue | Wed | Thu | Fri | Sat" />
 </androidx.constraintlayout.widget.ConstraintLayout>
