--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -33,8 +33,8 @@
 
         <TextView
             android:id="@+id/tvDayRegistries"
-            android:layout_width="404dp"
-            android:layout_height="146dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
