--- a/app/src/main/res/layout/fragment_add_edit_employee.xml
+++ b/app/src/main/res/layout/fragment_add_edit_employee.xml
@@ -232,7 +232,7 @@
             android:id="@+id/textView11"
             android:layout_width="93dp"
             android:layout_height="47dp"
-            android:text="Company ID:"
+            android:text="Company:"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="18sp"
@@ -244,8 +244,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.878" />
 
-        <EditText
-            android:id="@+id/tvEmployeeCompanyId"
+        <Spinner
+            android:id="@+id/spinEmployeeCompany"
             android:layout_width="262dp"
             android:layout_height="54dp"
             android:textColor="@android:color/black"
