--- a/app/src/main/res/layout/fragment_add_edit_employee.xml
+++ b/app/src/main/res/layout/fragment_add_edit_employee.xml
@@ -76,7 +76,8 @@
             app:layout_constraintHorizontal_bias="0.892"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.268" />
+            app:layout_constraintVertical_bias="0.268"
+            android:autofillHints="CIF" />
 
         <TextView
             android:id="@+id/textView5"
